completed some more reqs!

--- a/src/asg2.html
+++ b/src/asg2.html
@@ -12,7 +12,7 @@
       Notes to Grader: <br>
       hi !!! <br>
     </p>
-    <canvas id="webgl" width="400" height="400">
+    <canvas id="webgl" width="600" height="600">
     Please use a browser that supports "canvas"
     </canvas>
 
@@ -20,7 +20,10 @@
       hi :]
     </div>
     <div>
-      Camera Angle <input type="range" id="angle-range" min="-90" max="90" value = "0">
+      Camera Angle Y<input type="range" id="angle-range-y" min="-90" max="90" value = "0">
+    </div>
+    <div>
+      Camera Angle X<input type="range" id="angle-range-x" min="-90" max="90" value = "0">
     </div>
     <div>
       Back Leg, Seg 1 Angle <input type="range" id="legB_j1-range" min="0" max="90" value = "0">
