finished my things !

--- a/src/asg2.html
+++ b/src/asg2.html
@@ -10,7 +10,9 @@
       Julia Manou <br>
       jmanou@ucsc.edu <br>
       Notes to Grader: <br>
-      hi !!! <br>
+      hi !!!<br>
+      - shift-click while animation is off to initiate "poke"<br>
+      - non-primitive shapes (cylinders) make up the fence :)<br>
     </p>
     <canvas id="webgl" width="600" height="600">
     Please use a browser that supports "canvas"
@@ -43,6 +45,7 @@
     <script src="../lib/cuon-utils.js"></script>
     <script src="../lib/cuon-matrix.js"></script>
     <script src="Cube.js"></script>
+    <script src="Cylinder.js"></script>
     <script src="asg2.js"></script>
     <script src="anims.js"></script>
   </body>
